fix : collapses --> apartment page mobile version

--- a/src/pages/Apartment/index.scss
+++ b/src/pages/Apartment/index.scss
@@ -17,8 +17,8 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 20px 0px;
-    max-width: 100%;
+    margin: 20px 0;
+    width: 100%;
 
     .apartment-info {
       flex: 1;
@@ -101,7 +101,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 50px;
-    max-width: 1240px;
+    width: 100%;
+
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+      gap: 5px;
+      width: 100%;
+    }
   }
 }
 
@@ -117,91 +123,4 @@
       color: #000;
     }
   }
-}
-
-@media screen and (max-width: 768px) {
-  .apartment {
-    padding: 8px 10px;
-    max-width: 100%;
-    margin: 20px 0;
-
-    &-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      width: 100%;
-      gap: 20px;
-
-      .apartment-info {
-      flex: 1;
-
-      h1 {
-        font-size: 18px;
-        font-weight: 500;
-        color: #ff6060;
-        margin: 10px 0;
-      }
-
-      p {
-        margin: 5px 0;
-        font-size: 14px;
-        color: #000;
-      }
-
-      .apartment-tags {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        margin-top: 15px;
-
-        .tag {
-          background: #ff6060;
-          color: #fff;
-          padding: 5px 15px;
-          border-radius: 10px;
-          font-size: 10px;
-          font-weight: 700;
-        }
-        
-      }
-    }
-
-    .apartment-host {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      gap: 10px;
-
-      .host {
-
-        p {
-          white-space: pre-line;
-          font-size: 12px;
-        }
-
-        img {
-          width: 32px;
-          height: 32px;
-        }
-      }
-
-      .rating {
-
-        .star {
-          font-size: 18px;
-        }
-      }
-
-
-
-
-    }
-
-    &-collapses {
-      grid-template-columns: 1fr;
-      width: 100%;
-      gap: 5px;
-    }
-  }
-}
 }
